syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package dagrpc;

message ForceUpdateRequest {
    repeated string ids = 1 [(gogoproto.nullable) = false];
    string start        = 2;
    string end          = 3;
}

message ForceUpdateResponse {
    string err = 1;
}

service DlyAggregatorSVC {
    rpc ForceUpdate(ForceUpdateRequest) returns (ForceUpdateResponse) {}
}


